# TOmaDO

./: .gitignore  CMakeLists.txt  README.md  tomado_1.0.0_amd64.deb
include/: mainwindow.h
include/calendar/: calendarwidget.h
include/calendar/components/: calendarcellrenderer.h  calendarinteractionhandler.h  calendarnavigation.h  calendarstyles.h  calendarutils.h  coloreditemdelegate.h  customcalendarwidget.h  daydetailsdialog.h
include/common/: colorbutton.h  colorbuttonrenderer.h  colorpickergridmanager.h  colorpickerwidget.h  colorpickerwidgetconstants.h  colorselectionmanager.h
include/dashboard/: basedashboardwidget.h  counterwidget.h  dailydashboardwidget.h  goaldashboardwidget.h  totaldashboardwidget.h  weeklydashboardwidget.h
include/database/: databaseconnectionmanager.h  databaseconstants.h  databasemanager.h  databaseschemamanager.h
include/database/repositories/: goalrepository.h  timerrepository.h  todorepository.h
include/database/services/: colorservice.h
include/dialogs/goal/: goaldialog.h  goaldialogconstants.h  goaldialogformmanager.h  goaldialogui.h  goaldialogvalidator.h
include/dialogs/todo/: tododialog.h  tododialogconstants.h  tododialogformmanager.h  tododialogui.h  tododialogvalidator.h
include/settings/: settingsdialog.h
include/statistics/: statisticswidget.h
include/statistics/components/: statisticsdatamanager.h  statisticsgoalsviewwidget.h  statisticsheaderwidget.h  statisticstimelyviewwidget.h
include/timer/: compacttimerwidget.h  lavalamppaintwidget.h  soundmanager.h  timerbuttonmanager.h  timercore.h  timerdisplaymanager.h  timergoalsmanager.h
include/ui/: dialogstyles.h
packaging/: TOmaDO.desktop.in
src/: main.cpp  mainwindow.cpp
src/calendar/: calendarwidget.cpp
src/calendar/components/: calendarcellrenderer.cpp  calendarinteractionhandler.cpp  calendarnavigation.cpp  calendarstyles.cpp  calendarutils.cpp  coloreditemdelegate.cpp  customcalendarwidget.cpp  daydetailsdialog.cpp
src/common/: colorbutton.cpp  colorbuttonrenderer.cpp  colorpickergridmanager.cpp  colorpickerwidget.cpp  colorselectionmanager.cpp
src/dashboard/: basedashboardwidget.cpp  counterwidget.cpp  dailydashboardwidget.cpp  goaldashboardwidget.cpp  totaldashboardwidget.cpp  weeklydashboardwidget.cpp
src/database/: databaseconnectionmanager.cpp  databasemanager.cpp  databaseschemamanager.cpp
src/database/repositories/: goalrepository.cpp  timerrepository.cpp  todorepository.cpp
src/database/services/: colorservices.cpp
src/dialogs/goal/: goaldialog.cpp  goaldialogformmanager.cpp  goaldialogui.cpp  goaldialogvalidator.cpp
src/dialogs/todo/: tododialog.cpp  tododialogformmanager.cpp  tododialogui.cpp  tododialogvalidator.cpp
src/settings/: settingsdialog.cpp
src/statistics/: statisticswidget.cpp
src/statistics/components/: statisticsdatamanager.cpp  statisticsgoalsviewwidget.cpp  statisticsheaderwidget.cpp  statisticstimelyviewwidget.cpp
src/timer/: compacttimerwidget.cpp  lavalamppaintwidget.cpp  soundmanager.cpp  timerbuttonmanager.cpp  timercore.cpp  timerdisplaymanager.cpp  timergoalsmanager.cpp
